--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,12 +5,13 @@ stages:
 before_script:
     - rm -f titanium.lua
     - rm -f titanium.min.lua
-    - apt-get update && apt-get -y install lua5.2 luarocks
+    - apt-get update && apt-get -y install lua5.1 luarocks
     - luarocks install luafilesystem
 
 .job_template: &test_definition
   before_script:
-    - apt-get update && apt-get -y install lua5.2 luarocks cmake
+    - apt-get update && apt-get -y install lua5.1 luarocks cmake
+    - luarocks install bit32
     - luarocks install luafilesystem
     - luarocks install penlight
     - luarocks install luv
@@ -22,7 +23,7 @@ build:
   stage: build
   script:
     - echo "Running development build. Not building minified"
-    - lua5.2 ./bin/construct.lua --source src --output titanium.lua
+    - lua5.1 ./bin/construct.lua --source src --output titanium.lua
   artifacts:
     paths:
       - titanium.lua
@@ -33,8 +34,8 @@ build-release:
   stage: build
   script:
     - echo "Running release build. Building minified"
-    - lua5.2 ./bin/construct.lua --source src --output titanium.lua
-    - lua5.2 ./bin/construct.lua --source src --output titanium.min.lua --minify
+    - lua5.1 ./bin/construct.lua --source src --output titanium.lua
+    - lua5.1 ./bin/construct.lua --source src --output titanium.min.lua --minify
   artifacts:
     paths:
       - titanium.lua
@@ -47,7 +48,7 @@ test:
   stage: test
   script:
     - echo "Testing development build"
-    - lua5.2 emu/cli.lua bin/ci run_test.lua build/titanium.lua tml
+    - lua5.1 emu/cli.lua bin/ci run_test.lua build/titanium.lua tml
   except:
     - master
 
@@ -56,8 +57,8 @@ test-release:
   stage: test
   script:
     - echo "Testing release builds"
-    - lua5.2 /emu/cli.lua /bin/ci run_test.lua /build/titanium.lua tml
-    - lua5.2 /emu/cli.lua /bin/ci run_test.lua /build/titanium.min.lua tml
+    - lua5.1 /emu/cli.lua /bin/ci run_test.lua /build/titanium.lua tml
+    - lua5.1 /emu/cli.lua /bin/ci run_test.lua /build/titanium.min.lua tml
   only:
     - master
 
