--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,8 +61,8 @@ test-release:
   stage: test
   script:
     - echo "Testing release builds"
-    - luajit /emu/cli.lua . bin/ci/run_test.lua titanium.lua tml
-    - luajit /emu/cli.lua . bin/ci/run_test.lua titanium.min.lua tml
+    - luajit emu/cli.lua . bin/ci/run_test.lua titanium.lua tml
+    - luajit emu/cli.lua . bin/ci/run_test.lua titanium.min.lua tml
   only:
     - master
   dependencies:
