--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,7 @@ build-release:
     - ruby bin/commentParse.rb
     - echo "Publishing documentation"
     - echo -n data= > body
-    - echo -n "$(base64 rubyout)" >> body
+    - base64 rubyout >> body
     - echo -n "&key=$DEPLOY_DOCUMENTATION_KEY&tag=$CI_BUILD_TAG" >> body
     - curl --data "@body" http://harryfelton.web44.net/titanium/deliverDocs.php
   environment: release
